--- a/Views/Collaborateurs/Details.cshtml
+++ b/Views/Collaborateurs/Details.cshtml
@@ -92,7 +92,7 @@
             @Html.DisplayNameFor(model => model.Service)
         </dt>
         <dd>
-            @Html.DisplayFor(model => model.Service.ID)
+            @Html.DisplayFor(model => model.Service.Label)
         </dd>
     </dl>
 </div>
